# assistant_kit

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  locales.md  readme.md  runbox.dockerfile  vision.md  vision_ua.md
contract/claude_code/: Cargo.toml  readme.md
contract/claude_code/docs/: 001_entities.md  001_entity.md  entities.md  readme.md
contract/claude_code/src/: lib.rs
contract/claude_code/tests/: readme.md
module/agent_inventory/: Cargo.toml  readme.md
module/agent_inventory/src/: adapter.rs  claude_code.rs  entry.rs  error.rs  inventory.rs  lib.rs
module/agent_inventory/tests/: claude_code_test.rs  inventory_test.rs  readme.md
module/agent_kit/: Cargo.toml  readme.md
module/agent_kit/docs/: readme.md
module/agent_kit/src/: lib.rs
module/agent_kit/tests/: readme.md
module/assistant/: Cargo.toml  build.rs  readme.md
module/assistant/docs/: doc_graph.yml  entity.md  readme.md
module/assistant/run/: readme.md  runbox.yml
module/assistant/runbox/: plugins.sh  readme.md  runbox  runbox.yml
module/assistant/src/: lib.rs  main.rs  readme.md
module/assistant/task/: readme.md
module/assistant/tests/: aggregation.rs  cli_sanity.rs  readme.md  workspace_invariants.rs
module/assistant/verb/: build  clean  lint  readme.md  run  test  test_only  verbs
module/assistant_kit/: Cargo.toml  readme.md
module/assistant_kit/runbox/: plugins.sh  readme.md  runbox.yml
module/assistant_kit/src/: lib.rs
module/assistant_kit/tests/: readme.md
module/assistant_kit/verb/: build  clean  package_info  readme.md  test  test_only  verbs  verify
module/claude_assets/: Cargo.toml  readme.md  unilang.commands.yaml
module/claude_assets/docs/: doc_graph.yml  entity.md  readme.md
module/claude_assets/run/: readme.md  runbox.yml
module/claude_assets/runbox/: plugins.sh  readme.md  runbox.yml
module/claude_assets/src/: adapter.rs  commands.rs  lib.rs  main.rs  readme.md
module/claude_assets/tests/: cli.rs  readme.md
module/claude_assets/verb/: build  clean  lint  readme.md  run  test  test_only  verbs
module/claude_assets_core/: Cargo.toml  readme.md
module/claude_assets_core/docs/: doc_graph.yml  entity.md  readme.md
module/claude_assets_core/run/: runbox.yml
module/claude_assets_core/runbox/: plugins.sh  readme.md  runbox.yml
module/claude_assets_core/src/: artifact.rs  error.rs  install.rs  lib.rs  paths.rs  registry.rs
module/claude_assets_core/tests/: install.rs  readme.md
module/claude_assets_core/verb/: build  clean  lint  readme.md  test  test_only  verbs
module/claude_auth/: Cargo.toml  readme.md
module/claude_auth/run/: runbox.yml
module/claude_auth/runbox/: plugins.sh  readme.md  runbox.yml
module/claude_auth/src/: lib.rs
module/claude_auth/tests/: auth_test.rs  readme.md
module/claude_auth/verb/: clean  readme.md  run  test  test_only  verbs
module/claude_common/: Cargo.toml  readme.md
module/claude_common/src/: lib.rs  paths.rs  readme.md
module/claude_common/tests/: paths_test.rs  readme.md
module/claude_core/: Cargo.toml  readme.md
module/claude_core/docs/: readme.md
module/claude_core/run/: readme.md  runbox.yml
module/claude_core/runbox/: plugins.sh  readme.md  runbox.yml
module/claude_core/src/: lib.rs  paths.rs  process.rs  readme.md  settings_io.rs  toml_io.rs
module/claude_core/tests/: paths_test.rs  readme.md  settings_io_test.rs  toml_io_test.rs
module/claude_core/verb/: build  clean  lint  readme.md  test  test_only  verbs
module/claude_journal/: Cargo.toml  readme.md
module/claude_journal/docs/: 002_entity.md  doc_graph.yml  entity.md  readme.md
module/claude_journal/runbox/: plugins.sh  readme.md  runbox.yml
module/claude_journal/src/: event.rs  lib.rs  reader.rs  rotation.rs  writer.rs
module/claude_journal/tests/: journal_integration_test.rs
module/claude_journal/verb/: install  readme.md  test  test_only  verbs
module/claude_journal_viewer/: Cargo.toml  claude_journal.commands.yaml  readme.md
module/claude_journal_viewer/docs/: 002_entity.md  doc_graph.yml  entity.md  readme.md
module/claude_journal_viewer/runbox/: plugins.sh  readme.md  runbox.yml
module/claude_journal_viewer/src/: cli_main.rs  lib.rs  output.rs  routines.rs
module/claude_journal_viewer/tests/: viewer_integration_test.rs
module/claude_journal_viewer/verb/: install  readme.md  test  test_only  verbs
module/claude_manager/: Cargo.toml  changelog.md  readme.md  unilang.commands.yaml
module/claude_manager/docs/: design_decisions.md  doc_graph.yml  entities.md  readme.md
module/claude_manager/src/: adapter.rs  commands.rs  lib.rs  main.rs  readme.md  settings_io.rs
module/claude_manager/tests/: cli_args_test.rs  integration.rs  lib_test.rs  readme.md  settings_io_test.rs  smoke_test.rs
module/claude_profile/: Cargo.toml  Dockerfile  changelog.md  readme.md  unilang.commands.yaml  vision.md  vision_ua.md
module/claude_profile/docs/: 001_entities.md  doc_graph.yml  entities.md  readme.md
module/claude_profile/run/: docker  docker.yml  readme.md  runbox  runbox.yml  test  verb-run
module/claude_profile/runbox/: plugins.sh  readme.md  runbox  runbox.yml
module/claude_profile/scripts/: docker  readme.md
module/claude_profile/src/: account.rs  adapter.rs  cli.rs  commands.rs  lib.rs  main.rs  output.rs  owner_dispatch.rs  paths.rs  (+6 more)
module/claude_profile_core/: Cargo.toml  readme.md
module/claude_quota/: Cargo.toml  readme.md
module/claude_runner/: Cargo.toml  changelog.md  claude.commands.yaml  readme.md
module/claude_runner_core/: Cargo.toml  readme.md
module/claude_storage/: Cargo.toml  Dockerfile  build.rs  changelog.md  readme.md  unilang.commands.yaml
module/claude_storage_core/: Cargo.toml  changelog.md  readme.md
module/claude_tools/: Cargo.toml  build.rs  readme.md
module/claude_version/: Cargo.toml  changelog.md  license  readme.md  unilang.commands.yaml
module/claude_version_core/: Cargo.toml  readme.md
module/cli_fmt/: Cargo.toml  readme.md
module/dream/: Cargo.toml  readme.md
module/runbox/: Cargo.toml  readme.md  unilang.commands.yaml
(+4240 files in other folders)
