[package]
name = "claude_code"
version = "1.1.0"
publish = false
edition = "2021"
rust-version = "1.74"
authors = [ "wandalen" ]
license = "MIT"

[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
future_incompatible = { level = "warn", priority = -1 }
missing_docs = "warn"
missing_debug_implementations = "warn"
unsafe-code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
std_instead_of_core = "warn"
doc_include_without_cfg = "warn"
missing_inline_in_public_items = "warn"

# exceptions
single_call_fn = "allow"
inline_always = "allow"
module_name_repetitions = "allow"
absolute_paths = "allow"
wildcard_imports = "allow"
std_instead_of_alloc = "allow"
items_after_statements = "allow"
cast_precision_loss = "allow"
pub_use = "allow"
question_mark_used = "allow"
implicit_return = "allow"
needless_pass_by_value = "allow"
arbitrary_source_item_ordering = "allow"
mod_module_files = "allow"
missing_docs_in_private_items = "allow"

[[test]]
name = "behavior"
path = "tests/behavior/mod.rs"
