[package]
name         = "assistant"
version      = "1.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme       = "readme.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/assistant"
description  = "Agent-agnostic CLI super-app; aggregates all coding agent CLI tools into a single binary"
keywords     = [ "ai", "agent", "cli", "automation", "assistant" ]
categories   = [ "development-tools", "command-line-utilities" ]

[lints]
workspace = true

[lib]
name = "assistant"
path = "src/lib.rs"

[[bin]]
name = "assistant"
path = "src/main.rs"
required-features = [ "enabled" ]

[[bin]]
name = "ast"
path = "src/bin/ast.rs"
required-features = [ "enabled" ]

[features]
default = [ "enabled" ]
full    = [ "enabled" ]
enabled = [
  "dep:claude_assets",
  "claude_assets/enabled",
  "dep:claude_version",
  "claude_version/enabled",
  "dep:claude_profile",
  "claude_profile/enabled",
  "dep:claude_runner",
  "claude_runner/enabled",
  "dep:claude_storage",
  "claude_storage/cli",
  "dep:unilang",
  "unilang/enabled",
  "dep:error_tools",
  "error_tools/enabled",
]

[dependencies]
claude_assets  = { workspace = true, optional = true }
claude_version = { workspace = true, optional = true }
claude_profile = { workspace = true, optional = true }
claude_runner  = { workspace = true, optional = true }
claude_storage = { workspace = true, optional = true }
unilang        = { workspace = true, optional = true }
error_tools    = { workspace = true, optional = true }

[build-dependencies]
unilang    = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tempfile   = { workspace = true }
assert_cmd = { workspace = true }
