[package]
name         = "claude_assets_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme       = "readme.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/claude_assets_core"
description  = "Layer 1 domain logic: symlink-based Claude Code artifact installer"
keywords     = [ "claude", "ai", "assets", "symlink", "install" ]
categories   = [ "development-tools", "filesystem" ]

[lints]
workspace = true

[lib]
name = "claude_assets_core"
path = "src/lib.rs"

[features]
default = []
full    = [ "enabled" ]
enabled = []

[dev-dependencies]
tempfile = { workspace = true }
