[package]
name              = "claude_auth"
version           = "0.3.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme            = "readme.md"
documentation     = "https://docs.rs/claude_auth"
description       = "Anthropic OAuth token refresh transport — Layer * standalone primitive."
keywords          = [ "claude", "anthropic", "oauth", "token", "authentication" ]
categories        = [ "authentication", "web-programming::http-client" ]

[lints]
workspace = true

[features]
enabled = [ "dep:ureq" ]

[dependencies]
ureq = { workspace = true, optional = true }

[dev-dependencies]
