[package]
name = "claude_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "readme.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/claude_core"
description = "Shared Claude Code primitives: path topology and process utilities"
keywords = [ "claude", "ai", "utilities", "paths", "process" ]
categories = [ "development-tools" ]

[lints]
workspace = true

[features]
default = [ "enabled" ]
full = [ "enabled" ]
enabled = []

[dependencies]

[dev-dependencies]
test_tools = { workspace = true, features = [ "full" ] }
