[package]
name = "claude_journal"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "readme.md"
repository.workspace = true
homepage.workspace = true
description = "Append-only event journal library for CLR execution history"
keywords = [ "journal", "logging", "events", "claude", "runner" ]
categories = [ "development-tools" ]

[lints]
workspace = true

[lib]
name = "claude_journal"
path = "src/lib.rs"

[dependencies]
serde     = { workspace = true }
serde_json = { workspace = true }
chrono    = { workspace = true }

[dev-dependencies]
tempfile   = { workspace = true }
serde_json = { workspace = true }
