[package]
name = "claude_profile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "readme.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/claude_profile"
description = "Claude Code account credential management and token status"
keywords = [ "claude", "ai", "automation", "profile", "account" ]
categories = [ "authentication", "development-tools" ]

[lints]
workspace = true

[lib]
name = "claude_profile"
path = "src/lib.rs"

[[bin]]
name = "clp"
path = "src/bin/clp.rs"
required-features = [ "enabled" ]

[[bin]]
name = "claude_profile"
path = "src/main.rs"
required-features = [ "enabled" ]

[dependencies]
# Zero third-party (crates.io) dependencies for core library functionality.
# Internal workspace crates (claude_core, claude_profile_core) are allowed.
# CLI binary deps are feature-gated behind "enabled".
claude_core        = { workspace = true }
claude_profile_core  = { workspace = true }
error_tools          = { workspace = true, optional = true }
serde_json           = { workspace = true, optional = true }
unilang              = { workspace = true, optional = true }
ureq                 = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[features]
# Default: full CLI build (binary + all deps). Use --no-default-features for library-only.
default = [ "enabled" ]
# Master switch: activates CLI binary dependencies (error_tools, serde_json, unilang, ureq).
enabled = [
  "dep:error_tools",
  "error_tools/enabled",
  "error_tools/error_untyped",
  "dep:serde_json",
  "dep:unilang",
  "dep:ureq",
]
# Convenience: enables all functionality (currently equivalent to enabled).
full = [ "enabled" ]
