[package]
name = "claude_profile"
version = "1.5.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "readme.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/claude_profile"
description = "Claude Code account credential management and token status"
keywords = [ "claude", "ai", "automation", "profile", "account" ]
categories = [ "authentication", "development-tools" ]

[lints]
workspace = true

[lib]
name = "claude_profile"
path = "src/lib.rs"

[[bin]]
name = "clp"
path = "src/bin/clp.rs"
required-features = [ "enabled" ]

[[bin]]
name = "claude_profile"
path = "src/main.rs"
required-features = [ "enabled" ]

[[test]]
name = "usage_integration_test"
path = "tests/usage_integration_test.rs"
required-features = [ "testing" ]

[dependencies]
# Zero third-party (crates.io) dependencies for core library functionality.
# Internal workspace crates (claude_core, claude_profile_core) are allowed.
# CLI binary deps are feature-gated behind "enabled".
claude_core           = { workspace = true }
claude_profile_core   = { workspace = true, features = [ "enabled" ] }
claude_runner_core    = { workspace = true, optional = true, features = [ "enabled" ] }
cli_fmt               = { workspace = true, optional = true }
error_tools           = { workspace = true, optional = true }
unilang               = { workspace = true, optional = true }
claude_quota          = { workspace = true, optional = true, features = [ "enabled" ] }
data_fmt              = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
claude_quota       = { workspace = true, features = [ "enabled" ] }
claude_runner_core = { workspace = true, features = [ "enabled" ] }
unilang            = { workspace = true }

[features]
# Default: full CLI build (binary + all deps). Use --no-default-features for library-only.
default = [ "enabled" ]
# Master switch: activates CLI binary dependencies (error_tools, unilang, claude_quota, data_fmt).
enabled = [
  "dep:cli_fmt",
  "cli_fmt/cli_help_template",
  "dep:claude_runner_core",
  "dep:error_tools",
  "error_tools/enabled",
  "error_tools/error_untyped",
  "dep:unilang",
  "unilang/enabled",
  "dep:claude_quota",
  "dep:data_fmt",
  "data_fmt/enabled",
]
# Exposes pub test_bridge module for integration tests in tests/usage/.
# Requires enabled so claude_quota types are available.
testing = [ "enabled" ]
