[package]
name = "claude_profile_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "readme.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/claude_profile_core"
description = "Layer 1 domain logic: token status and account management for Claude Code"
keywords = [ "claude", "ai", "profile", "account", "token" ]
categories = [ "authentication", "development-tools" ]

[lints]
workspace = true

[features]
default = [ "enabled" ]
full = [ "enabled" ]
enabled = []

[dependencies]
claude_core = { workspace = true }

[dev-dependencies]
test_tools = { workspace = true, features = [ "full" ] }
tempfile   = { workspace = true }
