[package]
name = "claude_runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "readme.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/claude_runner"
description = "CLI for executing Claude Code via builder pattern; YAML schema constants for command registration"
keywords = [ "claude", "ai", "runner", "cli", "execution" ]
categories = [ "development-tools", "command-line-utilities" ]

[lints]
workspace = true

[lib]
name = "claude_runner"
path = "src/lib.rs"

[[bin]]
name = "claude_runner"
path = "src/main.rs"
required-features = [ "enabled" ]

[[bin]]
name = "clr"
path = "src/bin/clr.rs"
required-features = [ "enabled" ]

[features]
default = [ "enabled" ]
full = [ "enabled" ]
enabled = [
  "dep:claude_runner_core",
  "claude_runner_core/enabled",
  "dep:error_tools",
  "error_tools/enabled",
  "error_tools/error_untyped",
  "dep:unilang",
  "unilang/enabled",
]

[dependencies]
claude_runner_core = { workspace = true, optional = true }
error_tools        = { workspace = true, optional = true }
unilang            = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
