[package]
name = "claude_runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "readme.md"
repository.workspace = true
homepage.workspace = true
description = "CLI for executing Claude Code via builder pattern; YAML schema constants for command registration"
keywords = [ "claude", "ai", "runner", "cli", "execution" ]
categories = [ "development-tools", "command-line-utilities" ]

[lints]
workspace = true

[lib]
name = "claude_runner"
path = "src/lib.rs"

[[bin]]
name = "claude_runner"
path = "src/main.rs"
required-features = [ "enabled" ]

[[bin]]
name = "clr"
path = "src/bin/clr.rs"
required-features = [ "enabled" ]

[[bin]]
name = "c"
path = "src/bin/c.rs"
required-features = [ "enabled" ]

[features]
default = [ "enabled" ]
enabled = [
  "dep:claude_core",
  "dep:claude_runner_core",
  "claude_runner_core/enabled",
  "claude_core/enabled",
  "dep:claude_storage_core",
  "dep:error_tools",
  "error_tools/enabled",
  "error_tools/error_untyped",
  "dep:unilang",
  "unilang/enabled",
]

[dependencies]
claude_core         = { workspace = true, optional = true }
claude_runner_core  = { workspace = true, optional = true }
claude_storage_core = { workspace = true, optional = true }
error_tools         = { workspace = true, optional = true }
unilang             = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
