[package]
name = "claude_runner_core"
version = "1.6.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "readme.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/claude_runner_core"
description = "Claude Code process execution with builder pattern"
keywords = [ "claude", "ai", "runner", "process", "execution" ]
categories = [ "development-tools" ]

[lints]
workspace = true

[features]
default = [ "enabled" ]
full = [ "enabled" ]
enabled = [ "dep:error_tools", "error_tools/enabled", "error_tools/error_untyped" ]

[dependencies]
claude_core = { workspace = true }
error_tools   = { workspace = true, optional = true }

[dev-dependencies]
test_tools = { workspace = true, features = [ "full" ] }
tempfile = { workspace = true }

[package.metadata.cargo-udeps.ignore]
development = [ "test_tools" ]
